--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -2,9 +2,10 @@
   box-sizing: border-box;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
   padding: 34px 36px 37px;
   position: relative;
+  width: 410px;
 }
 
 @media screen and (max-width: 1023px) {
